--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "CydeSwype",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "~1.7.8"
+    "electron": "^1.8.2"
   },
   "dependencies": {
     "electron-push-receiver": "^1.2.4"
